--- a/src/components/CustomerSection.astro
+++ b/src/components/CustomerSection.astro
@@ -7,7 +7,7 @@ const customers = [
   },
   {
     name: "H & R Block",
-    logo: "../images/customers/h-r-block.png", // Changed from "H&R-Block.png"
+    logo: "../images/customers/h-r-block.png",
     industry: "Professional Services"
   },
   {
