--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -76,7 +76,7 @@ const schema = {
   <script type="application/ld+json" set:html={JSON.stringify(schema)} />
 
   <PageHeader
-    title="Our Services"
+    title="About Us"
     description="Professional solutions for your electrical infrastructure needs"
     image="/images/facility.jpg"
   />
