--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer class="bg-primary text-white mt-20">
+<footer class="bg-primary text-white">
   <div class="container mx-auto px-4 py-12">
     <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
       <div>
@@ -20,9 +20,9 @@ const currentYear = new Date().getFullYear();
       <div>
         <h3 class="text-xl font-bold mb-4">Contact</h3>
         <ul class="space-y-2">
-          <li>Email: info@techmanufacturing.com</li>
-          <li>Phone: +1 (555) 123-4567</li>
-          <li>Address: 123 Manufacturing St</li>
+          <li>Email: project.techpi@gmail.com</li>
+          <li>Phone: +91 8197496989 | 7032901979</li>
+          <li> <a href="https://maps.app.goo.gl/UffqnsTC94uSqSv97">Address: Plot No-977,IDA, Phase V, Rami Reddy Nagar, Jeedimetla, Hyderabad, Telangana,500055 📍</a> </li>
         </ul>
       </div>
       <div>
@@ -36,6 +36,7 @@ const currentYear = new Date().getFullYear();
     </div>
     <div class="border-t border-gray-600 mt-8 pt-8 text-center">
       <p>&copy; {currentYear} TechPi Solutions. All rights reserved.</p>
+      <p>Designed By Code Samaaj</p>
     </div>
   </div>
 </footer>
