--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,18 +1,23 @@
 ---
 ---
 
-<section class="relative bg-primary min-h-screen text-white overflow-hidden bg-cover bg-center" style="background-image: url('../images/facility.jpg');">
-  <div class="absolute inset-0 bg-gradient-to-r from-primary to-secondary opacity-90 filter brightness-50"></div>
-  <div class="relative container mx-auto px-4 py-16 md:py-32 flex items-center overflow-hidden brightness-100">
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center place-items-center mt-28">
+<section class="relative bg-primary min-h-screen text-white overflow-hidden bg-cover bg-center" style="background-image: url('../images/collage.jpg');">
+    <div class="absolute inset-0 bg-black opacity-60"></div>
+  <div class="relative container mx-auto px-4 py-16 md:py-32 flex items-center justify-center overflow-hidden brightness-100 text-center">
+    <div class="grid grid-cols-1 place-items-center gap-12 items-center mt-22 md:mt-20 max-w-3xl mx-auto">
+      
       <div data-aos="fade-right">
+        <h2 class="text-5xl font-bold mt-2 mb-2 text-white leading-tight"><span class="text-accent/90">TechPI Solutions</span></h2>
+        <div class="flex justify-center">
+          <div class="w-36 md:w-96 h-1 bg-accent/90 rounded-full mb-4"></div>
+        </div>
         <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">
           Excellence in Electrical Infrastructure
         </h1>
         <p class="text-xl mb-8 text-gray-100">
           Leading manufacturer of Cable Trays and Low Voltage Panels, delivering innovative solutions with uncompromising quality and reliability.
         </p>
-        <div class="flex flex-wrap gap-4">
+        <div class="flex flex-wrap gap-4 justify-center">
           <a 
             href="/products" 
             class="bg-secondary hover:bg-opacity-90 px-8 py-4 rounded-lg font-semibold text-lg transition-all transform hover:scale-105"
@@ -34,5 +39,3 @@
     </div>
   </div>
 </section>
-
-<!-- bg-gradient-to-r from-primary to-secondary -->
