hero image moving

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -128,11 +128,7 @@ const { title, description } = Astro.props;
       }
      ::-webkit-scrollbar {
   width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background: rgba(255, 255, 255, 0);
-  border-radius: 10px;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
