--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,12 +1,11 @@
 ---
-// Hero section with infinitely moving background and text overlay
 ---
 
-<section class="relative bg-primary min-h-screen text-white overflow-hidden">
+<section class="relative h-screen bg-primary text-white overflow-hidden">
     <div class="absolute inset-0 moving-background"></div>
     <div class="absolute inset-0 bg-black opacity-70"></div>
     
-    <div class="relative container mx-auto px-4 py-12 md:py-32 flex items-center justify-center overflow-hidden brightness-100 text-center">
+    <div class="relative h-full container mx-auto px-4 flex items-center justify-center overflow-hidden brightness-100 text-center">
         <div class="grid grid-cols-1 place-items-center gap-12 items-center mt-22 md:mt-18 max-w-3xl mx-auto">
             <div 
                 class="text-content-overlay p-8 rounded-xl bg-black/40 backdrop-blur-sm"
@@ -46,7 +45,8 @@
 <style>
     .moving-background {
         background-image: url('../images/collage.jpg');
-        background-size: auto 100%;
+        background-size: cover;
+        background-position: center;
         background-repeat: repeat-x;
         animation: move-background 20s linear infinite;
     }
