--- a/src/components/CustomerSection.astro
+++ b/src/components/CustomerSection.astro
@@ -1,35 +1,69 @@
 ---
+import { late } from "astro:schema";
+
 const customers = [
   {
-    name: "DuPont",
-    logo: "../images/customers/DuPont.png",
-    industry: "Chemical"
+    name: "AMD",
+    logo: "../images/customers/amd.png",
+    industry: "Semiconductor"
   },
   {
-    name: "H & R Block",
-    logo: "../images/customers/h-r-block.png",
-    industry: "Professional Services"
+    name: "Qualcomm",
+    logo: "../images/customers/qualcomm.png",
+    industry: "Semiconductor"
   },
+  
   {
     name: "Bank of America",
     logo: "../images/customers/bank.jpg",
     industry: "Banking"
   },
   {
-    name: "NCR Corporation",
-    logo: "../images/customers/NCR.png",
+    name: "Goldman Sachs",
+    logo: "../images/customers/gs.png",
+    industry: "Finance"
+  },
+  {
+    name: "HCL",
+    logo: "../images/customers/hcl.png",
     industry: "Technology"
   },
   {
-    name: "Verizon",
-    logo: "../images/customers/verizon.png",
-    industry: "Telecommunications"
+    name: "ISB",
+    logo: "../images/customers/isb.jpg",
+    industry: "Education"
+  },
+  {
+    name: "Hyundai",
+    logo: "../images/customers/hyundai.png",
+    industry: "Automobile"
+  },
+  {
+    name: "JSW",
+    logo: "../images/customers/jsw.jpg",
+    industry: "Steel"
   },
   {
     name: "Micron Technology",
     logo: "../images/customers/micron.png",
     industry: "Semiconductor"
-  }
+  },
+  {
+    name: "H & R Block",
+    logo: "../images/customers/h-r-block.png",
+    industry: "Finance"
+  },
+  {
+    name: "DuPont",
+    logo: "../images/customers/DuPont.png",
+    industry: "Chemical"
+  },
+  {
+    name: "NCR Corporation",
+    logo: "../images/customers/NCR.png",
+    industry: "Technology"
+  },
+  
 ];
 ---
 
