product preview updated

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -161,3 +161,17 @@ const schema = {
     </div>
   </section>
 </Layout>
+
+<style>
+  ::-webkit-scrollbar {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(30 59 138 / 0.8);
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+
+</style>
