--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,3 +9,16 @@
   @apply animate-scroll;
 }
 
+::-webkit-scrollbar {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(30 59 138 / 0.8);
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+body{
+  scrollbar-color: rgb(30 59 138 / 0.8) transparent;
+}
