nav bar padding

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -41,7 +41,7 @@ const navItems = [
 ---
 
 <header class="bg-primary/80 lg:backdrop-blur-md text-white fixed w-full top-0 left-0 z-[100]">
-  <nav class="container mx-auto lg:mx-4 px-4 py-2">
+  <nav class="container mx-auto lg:mr-12 px-4 py-2">
     <div class="relative">
       <div class="flex justify-between items-center">
         <a href="/" class="flex items-center gap-4 group">
